test/core/errors/identifiers_error/zs/prefix_zserio/const_name_error.zs
package prefix_zserio.const_name_error;

const uint32 ConstZserio = 10;

const string ZserioString = "hello";
